--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -174,3 +174,9 @@ h6, .h6 {
 .blog-footer p:last-child {
   margin-bottom: 0;
 }
+
+.alert-danger {
+  ul {
+    text-transform: uppercase;
+  }
+}
