--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -180,3 +180,14 @@ h6, .h6 {
     text-transform: uppercase;
   }
 }
+
+/*
+ * Flash Messages
+ */
+
+#flash-message {
+  position: absolute;
+  right: 20px;
+  bottom: 20px;
+  z-index: 10;
+}
